hphp/test/slow/clsmeth/elem-unset.php.expectf
array(0) {
}
array(1) {
  [0]=>
  array(0) {
  }
}
array(1) {
  [0]=>
  array(0) {
  }
}
object(P) (1) {
  ["m"]=>
  array(0) {
  }
}
array(0) {
}
array(1) {
  [0]=>
  array(0) {
  }
}
array(1) {
  [0]=>
  array(0) {
  }
}
object(P) (1) {
  ["m"]=>
  array(0) {
  }
}
array(0) {
}
array(1) {
  [0]=>
  array(0) {
  }
}
array(1) {
  [0]=>
  array(0) {
  }
}
object(P) (1) {
  ["m"]=>
  array(0) {
  }
}
array(0) {
}
array(1) {
  [0]=>
  array(0) {
  }
}
array(1) {
  [0]=>
  array(0) {
  }
}
object(P) (1) {
  ["m"]=>
  array(0) {
  }
}
array(2) {
  [0]=>
  string(3) "Foo"
  [1]=>
  string(3) "bar"
}

Fatal error: Cannot unset string offsets in %s/elem-unset.php on line 53
